jaeb-macros/tests/compile_fail/dead_letter_async.stderr
error: #[dead_letter_handler] must be synchronous — remove `async` (dead-letter handlers implement SyncEventHandler)
 --> tests/compile_fail/dead_letter_async.rs:6:1
  |
6 | async fn on_dead_letter(event: &DeadLetter) -> HandlerResult {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `DeadLetter` and `HandlerResult`
 --> tests/compile_fail/dead_letter_async.rs:3:12
  |
3 | use jaeb::{DeadLetter, HandlerResult, dead_letter_handler};
  |            ^^^^^^^^^^  ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
